--- a/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
@@ -8166,7 +8166,7 @@ spec:
                               type: object
                             kubeRbacProxyLogLevel:
                               default: 0
-                              description: The k8s.io/klog/v2 log level for the kube-rbac-proxy
+                              description: The glog log level for the kube-rbac-proxy
                                 container within the gateway pod. Larger values represent
                                 a higher verbosity. The default value is `0`.
                               format: int32
