--- a/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
@@ -8175,6 +8175,7 @@ spec:
                                     represent a higher verbosity. The default value
                                     is `0`.
                                   format: int32
+                                  minimum: 0
                                   type: integer
                               type: object
                             traefik:
@@ -8187,6 +8188,13 @@ spec:
                                     within the gateway pod: `DEBUG`, `INFO`, `WARN`,
                                     `ERROR`, `FATAL`, or `PANIC`. The default value
                                     is `INFO`'
+                                  enum:
+                                    - DEBUG
+                                    - INFO
+                                    - WARN
+                                    - ERROR
+                                    - FATAL
+                                    - PANIC
                                   type: string
                               type: object
                           type: object
