--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -7958,6 +7958,7 @@ spec:
                                   represent a higher verbosity. The default value
                                   is `0`.
                                 format: int32
+                                minimum: 0
                                 type: integer
                             type: object
                           traefik:
@@ -7970,6 +7971,13 @@ spec:
                                   within the gateway pod: `DEBUG`, `INFO`, `WARN`,
                                   `ERROR`, `FATAL`, or `PANIC`. The default value
                                   is `INFO`'
+                                enum:
+                                - DEBUG
+                                - INFO
+                                - WARN
+                                - ERROR
+                                - FATAL
+                                - PANIC
                                 type: string
                             type: object
                         type: object
