--- a/deploy/deployment/openshift/combined.yaml
+++ b/deploy/deployment/openshift/combined.yaml
@@ -7977,6 +7977,7 @@ spec:
                                   represent a higher verbosity. The default value
                                   is `0`.
                                 format: int32
+                                minimum: 0
                                 type: integer
                             type: object
                           traefik:
@@ -7989,6 +7990,13 @@ spec:
                                   within the gateway pod: `DEBUG`, `INFO`, `WARN`,
                                   `ERROR`, `FATAL`, or `PANIC`. The default value
                                   is `INFO`'
+                                enum:
+                                - DEBUG
+                                - INFO
+                                - WARN
+                                - ERROR
+                                - FATAL
+                                - PANIC
                                 type: string
                             type: object
                         type: object
